--- a/backendtransfiguracion/.env
+++ b/backendtransfiguracion/.env
@@ -1,1 +1,2 @@
 SECRET_KEY = 'django-insecure-1wk)6hkge#3@8f$9judmda0-vjsu9#+1kahln5iu7-nwbb*6-1'
+DATABASE_URL = 'postgresql://admin:akwH5mLnoCbXdPro46cfCr0SIelzY4Oa@dpg-d3scf53uibrs73erj910-a.oregon-postgres.render.com/pltds_wj60'
